samples/_failures_safe/1761485326_135218_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6b37447.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_b6b37447.c:145:26: error: expected ‘;’ at end of input
  145 |         visited[min_node]
      |                          ^
      |                          ;
./samples/SAFE/__tmp_b6b37447.c:145:9: error: expected declaration or statement at end of input
  145 |         visited[min_node]
      |         ^~~~~~~
./samples/SAFE/__tmp_b6b37447.c:145:9: error: expected declaration or statement at end of input
